--- a/BannerDN.html
+++ b/BannerDN.html
@@ -27,24 +27,37 @@
       <li><a href="focus.html">Focus</a></li>
     </ul>
   </header>
-  <section class="lign">
-    <nav>
-      <a href="Banner.html"><i class="fab fa-twitter"></i>BANNIERE</a>
-      <a href="computer.html">COMPUTER<i class="fas fa-desktop"></i></a>
-    </nav>
-  </section>
-  <section class="otheraccueil">
-    <div class="twitter">
-      <h1>WALL. pense aussi à ses utilisateurs twitter fan d'animés!</h1>
-      <p>WALL. vous propose une petite selection de bannières twitter et de fond d'écran PC (en attente de nouveauté!)...</p>
-      <a href="Banner.html">Voir les bannières <i class="fab fa-twitter"></i></a>
-    </div>
-    <div class="computer">
-      <img class="other-img" src="./img/Zorowano.JPG" alt="ZoroWano">
-      <a href="computer.html">Voir Wallpaper <i class="fas fa-desktop"></i></a>
-    </div>
-  </section>
-  <footer>
+  <nav>
+    <a href="BannerNaruto.html">NARUTO</a>
+    <a href="BannerOP.html">ONE PIECE</a>
+    <a href="BannerSNK.html">SNK</a>
+    <a href="BannerHxH.html">HxH</a>
+    <a class="active" href="BannerDN.html">DEATHNOTE</a>
+    <a href="BannerDB.html">DB</a>
+  </nav>
+<section id="Appreciate" class="appreciate">
+  <div class="container">
+      <ul class="appreciate-list">
+          <li class="appreciate-elem">
+            <img class="banniere" src="./img/Bannière/Ryuk&Lightbanniere.jpeg" alt="Ryuk" class="appreciate-elem-img">
+            <div class="appreciate-elem-text">
+                <p>Ryuk & Light</p>
+                <div class="appreciate-separator"></div>
+                <p>"Nope"</p>
+            </div>
+        </li>
+        <li class="appreciate-elem">
+          <img class="banniere" src="./img/Bannière/L&Light.JPG" alt="l&light" class="appreciate-elem-img">
+          <div class="appreciate-elem-text">
+              <p>L & Light</p>
+              <div class="appreciate-separator"></div>
+              <p>Black theme</p>
+          </div>
+      </li>
+      </ul>
+  </div>
+</section>
+<footer>
     <aside>
       <div class="block">
           <h2>SOCIAL</h2>
@@ -65,6 +78,6 @@
     <p>
         Copyright © 2020 M.LEMERCIER, Inc.
     </p>
-</footer>
-</body>
-</html>
+  </footer>
+  </body>
+  </html>
