--- a/BannerOP.html
+++ b/BannerOP.html
@@ -28,75 +28,13 @@
     </ul>
   </header>
   <nav>
-    <a class="active" href="twitter.html"><i class="fab fa-twitter"></i>BANNIERE</a>
-    <a href="computer.html">COMPUTER<i class="fas fa-desktop"></i></a>
+    <a href="BannerNaruto.html">NARUTO</a>
+    <a class="active" href="BannerOP.html">ONE PIECE</a>
+    <a href="BannerSNK.html">SNK</a>
+    <a href="BannerHxH.html">HxH</a>
+    <a href="BannerDN.html">DEATHNOTE</a>
+    <a href="BannerDB.html">DB</a>
   </nav>
-  <section id="Appreciate" class="appreciate">
-    <div class="container">
-        <ul class="appreciate-list">
-            <li class="appreciate-elem">
-                <img class="banniere" src="./img/Bannière/3freresbannieres.png" alt="3 frères" class="appreciate-elem-img">
-                <div class="appreciate-elem-text">
-                    <p>Ace, Luffy & Sabo</p>
-                    <div class="appreciate-separator"></div>
-                    <p>3 frères 3 fauves</p>
-                </div>
-            </li>
-            <li class="appreciate-elem">
-              <img class="banniere" src="./img/Bannière/Gon&Kiruabanniere.png" alt="Gon&Kirua" class="appreciate-elem-img">
-              <div class="appreciate-elem-text">
-                  <p>Gon & Kirua</p>
-                  <div class="appreciate-separator"></div>
-                  <p>"Yo"</p>
-              </div>
-          </li>
-        </ul>
-    </div>
-  </section>
-  <section id="Appreciate" class="appreciate">
-    <div class="container">
-        <ul class="appreciate-list">
-            <li class="appreciate-elem">
-                <img class="banniere" src="./img/Bannière/Itachiincrustebanniere.png" alt="Itachi" class="appreciate-elem-img">
-                <div class="appreciate-elem-text">
-                    <p>Itachi Uchiwa</p>
-                    <div class="appreciate-separator"></div>
-                    <p>Incrusté -> Twitter sombre</p>
-                </div>
-            </li>
-            <li class="appreciate-elem">
-              <img class="banniere" src="./img/Bannière/Robinbanniere.png" alt="Robin" class="appreciate-elem-img">
-              <div class="appreciate-elem-text">
-                  <p>Nico Robin</p>
-                  <div class="appreciate-separator"></div>
-                  <p>Purple style</p>
-              </div>
-          </li>
-        </ul>
-    </div>
-  </section>
-  <section id="Appreciate" class="appreciate">
-    <div class="container">
-        <ul class="appreciate-list">
-            <li class="appreciate-elem">
-                <img class="banniere" src="./img/Bannière/Minato&Kyubibannier.png" alt="Minato" class="appreciate-elem-img">
-                <div class="appreciate-elem-text">
-                    <p>Minato Namikaze</p>
-                    <div class="appreciate-separator"></div>
-                    <p>Attaque Kyubi</p>
-                </div>
-            </li>
-            <li class="appreciate-elem">
-              <img class="banniere" src="./img/Bannière/Obitobanniere.png" alt="Obito" class="appreciate-elem-img">
-              <div class="appreciate-elem-text">
-                  <p>Obito Uchiha</p>
-                  <div class="appreciate-separator"></div>
-                  <p>Story</p>
-              </div>
-          </li>
-        </ul>
-    </div>
-  </section>
   <section id="Appreciate" class="appreciate">
     <div class="container">
         <ul class="appreciate-list">
@@ -123,6 +61,36 @@
     <div class="container">
         <ul class="appreciate-list">
             <li class="appreciate-elem">
+              <img class="banniere" src="./img/Bannière/BannerluffyMin.JPG" alt="Luffy" class="appreciate-elem-img">
+              <div class="appreciate-elem-text">
+                  <p>Monkey D. Luffy</p>
+                  <div class="appreciate-separator"></div>
+                  <p>Minimalist</p>
+              </div>
+          </li>
+          <li class="appreciate-elem">
+            <img class="banniere" src="./img/Bannière/CrocodileMin.JPG" alt="Crocodile" class="appreciate-elem-img">
+            <div class="appreciate-elem-text">
+                <p>Crocodile</p>
+                <div class="appreciate-separator"></div>
+                <p>Minimalist</p>
+            </div>
+        </li>
+        </ul>
+    </div>
+  </section>
+  <section id="Appreciate" class="appreciate">
+    <div class="container">
+        <ul class="appreciate-list">
+            <li class="appreciate-elem">
+                <img class="banniere" src="./img/Bannière/3freresbannieres.png" alt="3 frères" class="appreciate-elem-img">
+                <div class="appreciate-elem-text">
+                    <p>Ace, Luffy & Sabo</p>
+                    <div class="appreciate-separator"></div>
+                    <p>3 frères 3 fauves</p>
+                </div>
+            </li>
+            <li class="appreciate-elem">
                 <img class="banniere" src="./img/Bannière/Newgatebanniere.png" alt="Newgate" class="appreciate-elem-img">
                 <div class="appreciate-elem-text">
                     <p>Barbe blanche</p>
@@ -130,14 +98,28 @@
                     <p>"Le ONE PIECE existe!!"</p>
                 </div>
             </li>
+        </ul>
+    </div>
+  </section>
+  <section id="Appreciate" class="appreciate">
+    <div class="container">
+        <ul class="appreciate-list">
             <li class="appreciate-elem">
-              <img class="banniere" src="./img/Bannière/Sasuke&Naruto.png" alt="Sasuke&Naruto" class="appreciate-elem-img">
+              <img class="banniere" src="./img/Bannière/Robinbanniere.png" alt="Robin" class="appreciate-elem-img">
               <div class="appreciate-elem-text">
-                  <p>Sasuke & Naruto</p>
+                  <p>Nico Robin</p>
                   <div class="appreciate-separator"></div>
-                  <p>Fin combat final</p>
+                  <p>Purple style</p>
               </div>
           </li>
+          <li class="appreciate-elem">
+            <img class="banniere" src="./img/Bannière/Ace&Luffy.png" alt="Ace&Luffy" class="appreciate-elem-img">
+            <div class="appreciate-elem-text">
+                <p>Ace & Luffy</p>
+                <div class="appreciate-separator"></div>
+                <p>B&W</p>
+            </div>
+        </li>
         </ul>
     </div>
   </section>
@@ -167,21 +149,43 @@
     <div class="container">
         <ul class="appreciate-list">
             <li class="appreciate-elem">
-                <img class="banniere" src="./img/Bannière/Ace&Luffy.png" alt="Ace&Luffy" class="appreciate-elem-img">
-                <div class="appreciate-elem-text">
-                    <p>Ace & Luffy</p>
-                    <div class="appreciate-separator"></div>
-                    <p>B&W</p>
-                </div>
-            </li>
-            <li class="appreciate-elem">
-              <img class="banniere" src="./img/Bannière/Gohanbanniere.png" alt="Gohan" class="appreciate-elem-img">
+              <img class="banniere" src="./img/Bannière/KizaruMin.JPG" alt="Kizaru" class="appreciate-elem-img">
               <div class="appreciate-elem-text">
-                  <p>Son Gohan</p>
+                  <p>Kizaru</p>
                   <div class="appreciate-separator"></div>
-                  <p>Kamehameha vs Cell</p>
+                  <p>Minimalist</p>
               </div>
           </li>
+          <li class="appreciate-elem">
+            <img class="banniere" src="./img/Bannière/Acemkn.JPG" alt="Ace" class="appreciate-elem-img">
+            <div class="appreciate-elem-text">
+                <p>Ace</p>
+                <div class="appreciate-separator"></div>
+                <p>Minimalist</p>
+            </div>
+        </li>
+        </ul>
+    </div>
+  </section>
+  <section id="Appreciate" class="appreciate">
+    <div class="container">
+        <ul class="appreciate-list">
+            <li class="appreciate-elem">
+              <img class="banniere" src="./img/Bannière/Doffyincruste.JPG" alt="Doflamingo" class="appreciate-elem-img">
+              <div class="appreciate-elem-text">
+                  <p>Doflamingo</p>
+                  <div class="appreciate-separator"></div>
+                  <p>Incrusté</p>
+              </div>
+          </li>
+          <li class="appreciate-elem">
+            <img class="banniere" src="./img/Bannière/Doflamingorire.JPG" alt="Doflamingo" class="appreciate-elem-img">
+            <div class="appreciate-elem-text">
+                <p>Doflamingo</p>
+                <div class="appreciate-separator"></div>
+                <p>Rire</p>
+            </div>
+        </li>
         </ul>
     </div>
   </section>
@@ -197,42 +201,6 @@
                 </div>
             </li>
             <li class="appreciate-elem">
-              <img class="banniere" src="./img/Bannière/Goku&Vegetabanniere.png" alt="Goku&Vegeta" class="appreciate-elem-img">
-              <div class="appreciate-elem-text">
-                  <p>Goku & Vegeta</p>
-                  <div class="appreciate-separator"></div>
-                  <p>Blue vs Red</p>
-              </div>
-          </li>
-        </ul>
-    </div>
-  </section>
-  <section id="Appreciate" class="appreciate">
-    <div class="container">
-        <ul class="appreciate-list">
-            <li class="appreciate-elem">
-                <img class="banniere" src="./img/Bannière/Livaivsbeasttitanbanniere.jpeg" alt="Livai" class="appreciate-elem-img">
-                <div class="appreciate-elem-text">
-                    <p>Livaï vs Beast titan</p>
-                    <div class="appreciate-separator"></div>
-                    <p>Saison 3 - Tome 20</p>
-                </div>
-            </li>
-            <li class="appreciate-elem">
-              <img class="banniere" src="./img/Bannière/Ryuk&Lightbanniere.jpeg" alt="Ryuk" class="appreciate-elem-img">
-              <div class="appreciate-elem-text">
-                  <p>Ryuk & Light</p>
-                  <div class="appreciate-separator"></div>
-                  <p>"Nope"</p>
-              </div>
-          </li>
-        </ul>
-    </div>
-  </section>
-  <section id="Appreciate" class="appreciate">
-    <div class="container">
-        <ul class="appreciate-list">
-            <li class="appreciate-elem">
                 <img class="banniere" src="./img/Bannière/Zoro2banniere.png" alt="Zoro" class="appreciate-elem-img">
                 <div class="appreciate-elem-text">
                     <p>Roronoa Zoro</p>
@@ -240,14 +208,6 @@
                     <p>Loguetown</p>
                 </div>
             </li>
-            <li class="appreciate-elem">
-              <img class="banniere" src="./img/Bannière/sasukebanniere.JPG" alt="Sasuke" class="appreciate-elem-img">
-              <div class="appreciate-elem-text">
-                  <p>Sasuke Uchiwa</p>
-                  <div class="appreciate-separator"></div>
-                  <p>Fait trempette</p>
-              </div>
-          </li>
         </ul>
     </div>
   </section>
@@ -255,21 +215,21 @@
     <div class="container">
         <ul class="appreciate-list">
             <li class="appreciate-elem">
-                <img class="banniere" src="./img/Bannière/Narutobanniere.JPG" alt="Naruto" class="appreciate-elem-img">
-                <div class="appreciate-elem-text">
-                    <p>Naruto Uzumaki</p>
-                    <div class="appreciate-separator"></div>
-                    <p>Hokage - Osaka</p>
-                </div>
-            </li>
-            <li class="appreciate-elem">
-              <img class="banniere" src="./img/Bannière/Vegetabanniere.JPG" alt="Vegeta" class="appreciate-elem-img">
+              <img class="banniere" src="./img/Bannière/SakazukiMin.JPG" alt="Sakazuki" class="appreciate-elem-img">
               <div class="appreciate-elem-text">
-                  <p>Vegeta</p>
+                  <p>Akainu</p>
                   <div class="appreciate-separator"></div>
-                  <p>Base Form</p>
+                  <p>Minimalist</p>
               </div>
           </li>
+          <li class="appreciate-elem">
+            <img class="banniere" src="./img/Bannière/Namimin.JPG" alt="nami" class="appreciate-elem-img">
+            <div class="appreciate-elem-text">
+                <p>Nami</p>
+                <div class="appreciate-separator"></div>
+                <p>Minimalist</p>
+            </div>
+        </li>
         </ul>
     </div>
   </section>
@@ -299,19 +259,63 @@
     <div class="container">
         <ul class="appreciate-list">
             <li class="appreciate-elem">
-                <img class="banniere" src="./img/Bannière/Alluka&Killua.JPG" alt="Alluka&KIrua" class="appreciate-elem-img">
-                <div class="appreciate-elem-text">
-                    <p>Alluka&Kirua</p>
-                    <div class="appreciate-separator"></div>
-                    <p>Zoldyck</p>
-                </div>
-            </li>
-            <li class="appreciate-elem">
               <img class="banniere" src="./img/Bannière/marcobanniere.JPG" alt="Marco" class="appreciate-elem-img">
               <div class="appreciate-elem-text">
                   <p>Marco</p>
                   <div class="appreciate-separator"></div>
                   <p>Le phénix</p>
+              </div>
+          </li>
+          <li class="appreciate-elem">
+            <img class="banniere" src="./img/Bannière/Usoppbanner2.jpeg" alt="Usopp" class="appreciate-elem-img">
+            <div class="appreciate-elem-text">
+                <p>Usopp</p>
+                <div class="appreciate-separator"></div>
+                <p>Post Ellipse</p>
+            </div>
+        </li>
+        </ul>
+    </div>
+  </section>
+  <section id="Appreciate" class="appreciate">
+    <div class="container">
+        <ul class="appreciate-list">
+            <li class="appreciate-elem">
+                <img class="banniere" src="./img/Bannière/AceOtamabanner1.JPG" alt="Ace&Otama" class="appreciate-elem-img">
+                <div class="appreciate-elem-text">
+                    <p>Ace & Otama</p>
+                    <div class="appreciate-separator"></div>
+                    <p>PACK</p>
+                </div>
+            </li>
+            <li class="appreciate-elem">
+              <img class="banniere" src="./img/Bannière/AceOtamabanner2.JPG" alt="Ace & Otama" class="appreciate-elem-img">
+              <div class="appreciate-elem-text">
+                  <p>Ace & Otama</p>
+                  <div class="appreciate-separator"></div>
+                  <p>PACK</p>
+              </div>
+          </li>
+        </ul>
+    </div>
+  </section>
+  <section id="Appreciate" class="appreciate">
+    <div class="container">
+        <ul class="appreciate-list">
+            <li class="appreciate-elem">
+                <img class="banniere" src="./img/Bannière/AceOtamabanner3.JPG" alt="Ace&Otama" class="appreciate-elem-img">
+                <div class="appreciate-elem-text">
+                    <p>Ace & Otama</p>
+                    <div class="appreciate-separator"></div>
+                    <p>PACK</p>
+                </div>
+            </li>
+            <li class="appreciate-elem">
+              <img class="banniere" src="./img/Bannière/AceOtamabanner4.JPG" alt="Ace & Otama" class="appreciate-elem-img">
+              <div class="appreciate-elem-text">
+                  <p>Ace & Otama</p>
+                  <div class="appreciate-separator"></div>
+                  <p>PACK</p>
               </div>
           </li>
         </ul>
