--- a/computer.html
+++ b/computer.html
@@ -28,7 +28,7 @@
     </ul>
   </header>
   <nav>
-    <a href="twitter.html"><i class="fab fa-twitter"></i>BANNIERE</a>
+    <a href="banner.html"><i class="fab fa-twitter"></i>BANNIERE</a>
     <a class="active" href="computer.html">COMPUTER<i class="fas fa-desktop"></i></a>
   </nav>
   <section id="Appreciate" class="appreciate">
