--- a/focus.html
+++ b/focus.html
@@ -37,7 +37,7 @@
           <p>M. Lemercier</p>
         </div>
         <div class="article-content">
-          <p>Je promeus ce mois-ci <span class="gras">@Drawinoff</span>, pour son travail et son style personnel. Il dessine des personnages d'animés avec un style atypique. Le personnage apparaît déchiré, presque brulé des fois, et le moins que l'on puisse dire c'est qu'il a remporté un franc succès sur twitter! Les dessins sont très réussis, on ressent la patte de l'artiste.
+          <p>Je promeus ce mois-ci <span class="gras">@Drawinoff</span>, pour son travail et son style personnel. Il dessine des personnages d'animés avec un style atypique. <br> Le personnage apparaît déchiré, presque brulé des fois, et le moins que l'on puisse dire c'est qu'il a remporté un franc succès sur twitter! Les dessins sont très réussis, on ressent la patte de l'artiste.
           Avec le soutien de ses fans, il a ouvert sa propre e-boutique, trouvable actuellement sur ses réseaux (disponibles ci-dessous). Dans cette dernière, on y retrouve ses dessins qu'il vend pour une modique somme.
         Je vous conseille d'aller faire un tour sur son profil pour lui donner de la force même si je suis sur que vous irez directement vous abonner lorsque vous verrez ses dessins ci-dessous. Je vous laisse son @ twitter/insta juste en dessous!
       Au plaisir pour un nouveau focus :)</p>
