--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
   </head>
   <body>
     <header>
-      <h1>
-        WALL.</h1>
+      <h1>WALL.</h1>
       <ul>
         <li><a class="active" href="index.html">Accueil</a></li>
         <li><a href="phone.html">Phones</a></li>
@@ -88,7 +87,7 @@
     </section>
     <div class="pack">
       <div class="pack-container">
-        <h2 class="banner">STARTER PACK</h2>
+        <h2>STARTER PACK</h2>
         <p>Otama & Ace</p>
           <div class="starter">
             <ul class="starter-list1">
