--- a/BannerOP.html
+++ b/BannerOP.html
@@ -61,6 +61,28 @@
     <div class="container">
         <ul class="appreciate-list">
             <li class="appreciate-elem">
+                <img class="banniere" src="./img/Bannière/robin&samereban.jpeg" alt="Robin" class="appreciate-elem-img">
+                <div class="appreciate-elem-text">
+                    <p>Olvia et Robin</p>
+                    <div class="appreciate-separator"></div>
+                    <p>"Adieu"</p>
+                </div>
+            </li>
+            <li class="appreciate-elem">
+              <img class="banniere" src="./img/Bannière/RegardShanksban.jpeg" alt="Sanks" class="appreciate-elem-img">
+              <div class="appreciate-elem-text">
+                  <p>Shanks</p>
+                  <div class="appreciate-separator"></div>
+                  <p>Yeux</p>
+              </div>
+          </li>
+        </ul>
+    </div>
+  </section>
+  <section id="Appreciate" class="appreciate">
+    <div class="container">
+        <ul class="appreciate-list">
+            <li class="appreciate-elem">
               <img class="banniere" src="./img/Bannière/BannerluffyMin.JPG" alt="Luffy" class="appreciate-elem-img">
               <div class="appreciate-elem-text">
                   <p>Monkey D. Luffy</p>
