--- a/NarutoP.html
+++ b/NarutoP.html
@@ -376,6 +376,48 @@
     <div class="container">
         <ul class="appreciate-list">
             <li class="appreciate-elem">
+                <img src="./img/Naruto/Hidannight.jpeg" alt="Hidan" class="appreciate-elem-img">
+                <div class="appreciate-elem-text">
+                    <p>Hidan</p>
+                    <p>Night</p>
+                    <div class="appreciate-separator"></div>
+                    <p>Auteur: Tark</p>
+                </div>
+            </li>
+            <li class="appreciate-elem">
+              <img src="./img/Naruto/narutostreetstyle.JPG" alt="Naruto" class="appreciate-elem-img">
+              <div class="appreciate-elem-text">
+                  <p>Naruto</p>
+                  <p>Streetstyle</p>
+                  <div class="appreciate-separator"></div>
+                  <p>Auteur: Froz</p>
+              </div>
+          </li>
+          <li class="appreciate-elem">
+            <img src="./img/Naruto/Shisui&itachi.JPG" alt="Shisui" class="appreciate-elem-img">
+            <div class="appreciate-elem-text">
+                <p>Shisui & Itachi Uchiwa</p>
+                <p>Night</p>
+                <div class="appreciate-separator"></div>
+                <p>Auteur: Mugiwara_D_amore</p>
+            </div>
+          </li>
+          <li class="appreciate-elem">
+            <img src="./img/Naruto/sasukevsnarutocf.jpeg" alt="Sasuke&naruto" class="appreciate-elem-img">
+            <div class="appreciate-elem-text">
+                <p>Sasuke & Naruto</p>
+                <p>FINAL FIGHT</p>
+                <div class="appreciate-separator"></div>
+                <p>Auteur: XCLEMZ</p>
+            </div>
+        </li>
+        </ul>
+    </div>
+  </section>
+  <section id="Appreciate" class="appreciate">
+    <div class="container">
+        <ul class="appreciate-list">
+            <li class="appreciate-elem">
                 <img src="./img/Naruto/Itachimassacre.JPG" alt="Itachi" class="appreciate-elem-img">
                 <div class="appreciate-elem-text">
                     <p>Itachi Uchiwa </p>
