--- a/OnepieceP.html
+++ b/OnepieceP.html
@@ -376,6 +376,48 @@
     <div class="container">
         <ul class="appreciate-list">
             <li class="appreciate-elem">
+                <img src="./img/One piece/merameranomi 11.12.19.jpeg" alt="Merameranomi" class="appreciate-elem-img">
+                <div class="appreciate-elem-text">
+                    <p>Mera mera no mi</p>
+                    <p>Ace & Sabo</p>
+                    <div class="appreciate-separator"></div>
+                    <p>Auteur: XCLEMZ</p>
+                </div>
+            </li>
+            <li class="appreciate-elem">
+                <img class="whitz" src="./img//One piece/luffyminiwhite.jpeg" alt="Luffy" class="appreciate-elem-img">
+                <div class="appreciate-elem-text">
+                    <p>Monkey D. Luffy</p>
+                    <p>Enfance</p>
+                    <div class="appreciate-separator"></div>
+                    <p>Auteur: ?</p>
+                </div>
+            </li>
+            <li class="appreciate-elem">
+                <img src="./img/One piece/RobLUcci 11.12.19.JPG" alt="Lucci" class="appreciate-elem-img">
+                <div class="appreciate-elem-text">
+                    <p>Rob Lucci</p>
+                    <p>Zoan</p>
+                    <div class="appreciate-separator"></div>
+                    <p>Auteur: ?</p>
+                </div>
+            </li>
+            <li class="appreciate-elem">
+              <img class="tapion" src="./img/One piece/Usoppaction.jpeg" alt="Usopp" class="appreciate-elem-img">
+              <div class="appreciate-elem-text">
+                  <p>Usopp</p>
+                  <p>ACTION</p>
+                  <div class="appreciate-separator"></div>
+                  <p>Auteur: Tark</p>
+              </div>
+          </li>
+        </ul>
+    </div>
+  </section>
+  <section id="Appreciate" class="appreciate">
+    <div class="container">
+        <ul class="appreciate-list">
+            <li class="appreciate-elem">
                 <img src="./img/One piece/Zoro3.jpeg" alt="zoro" class="appreciate-elem-img">
                 <div class="appreciate-elem-text">
                     <p>Roronoa Zoro</p>
