--- a/index.html
+++ b/index.html
@@ -112,45 +112,45 @@
       </div>
     <section id="Appreciate" class="appreciate">
       <div class="container">
-          <h2 class="title-underline" >Ajouts récents - ONE PIECE/SNK</h2>
+          <h2 class="title-underline" >Ajouts récents - NARUTO/ONE PIECE</h2>
           <ul class="appreciate-list">
-              <li class="appreciate-elem">
-                  <img src="./img/One piece/Smoker.jpeg" alt="Smoker" class="appreciate-elem-img">
+              <li class="appreciate-elem4">
+                  <img src="./img/Naruto/narutostreetstyle.JPG" alt="Naruto" class="appreciate-elem-img">
                   <div class="appreciate-elem-text">
-                      <p>Smoker</p>
-                      <p>& ses 2 cigares</p>
+                      <p>Naruto</p>
+                      <p>Streetstyle</p>
                       <div class="appreciate-separator"></div>
-                      <p>Auteur: @Occhada</p>
+                      <p>Auteur: Froz</p>
                   </div>
               </li>
-              <li class="appreciate-elem">
-                <img src="./img/One piece/Zorooklm.JPG" alt="Zoro" class="appreciate-elem-img">
+              <li class="appreciate-elem4">
+                <img src="./img/Naruto/Shisui&itachi.JPG" alt="Shisui" class="appreciate-elem-img">
                 <div class="appreciate-elem-text">
-                    <p>Roronoa Zoro</p>
-                    <p>& Enma</p>
+                    <p>Shisui & Itachi Uchiwa</p>
+                    <p>Night</p>
                     <div class="appreciate-separator"></div>
-                    <p>Auteur: DLELE</p>
+                    <p>Auteur: Mugiwara_D_amore</p>
                 </div>
-            </li>
-            <li class="appreciate-elem">
-              <img class="tapion" src="./img/SNK/LivaiShelby.JPG" alt="Livai" class="appreciate-elem-img">
+              </li>
+              <div class="appreciate-banaccueil">
+              <li class="appreciate-elem3">
+              <img class="banniere" src="./img/Bannière/robin&samereban.jpeg" alt="Robin" class="appreciate-elem-img">
               <div class="appreciate-elem-text">
-                  <p>Livaï Ackerman</p>
-                  <p>Peaky Blinders</p>
+                  <p>Olvia et Robin</p>
                   <div class="appreciate-separator"></div>
-                  <p>Auteur: @abdel_uchiha</p>
+                  <p>"Adieu"</p>
               </div>
-            </li>
-            <li class="appreciate-elem">
-              <img src="./img/SNK/Mikasatitancolossal.JPG" alt="Mikasa" class="appreciate-elem-img">
-              <div class="appreciate-elem-text">
-                  <p>Mikasa Ackerman</p>
-                  <p>& titan colossal</p>
+              </li>
+              <li class="appreciate-elem3">
+                <img class="banniere" src="./img/Bannière/RegardShanksban.jpeg" alt="Sanks" class="appreciate-elem-img">
+                <div class="appreciate-elem-text">
+                  <p>Shanks</p>
                   <div class="appreciate-separator"></div>
-                  <p>Auteur: @imKIYU</p>
-              </div>
-            </li>
-          </ul>
+                  <p>Yeux</p>
+                </div>
+              </li>
+            </div>
+        </ul>
       </div>
     </section>
     <div class="content">
