--- a/OnepieceP.html
+++ b/OnepieceP.html
@@ -310,7 +310,7 @@
                 </div>
             </li>
             <li class="appreciate-elem">
-                <img src="./img/One piece/Shanks.JPG" alt="Shanks" class="appreciate-elem-img">
+                <img class="tapion" src="./img/One piece/Shanks.JPG" alt="Shanks" class="appreciate-elem-img">
                 <div class="appreciate-elem-text">
                     <p>Shanks</p>
                     <p>YONKO</p>
@@ -324,7 +324,7 @@
                   <p>PNL</p>
                   <p>Avis de recherche</p>
                   <div class="appreciate-separator"></div>
-                  <p>Auteur: ?</p>
+                  <p>Auteur: @abdel_uchiha</p>
               </div>
           </li>
         </ul>
